--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,18 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.26"
+
+[fuzz]
+runs = 1000
+max_test_rejects = 65536
+dictionary_weight = 40
+include_storage = true
+include_push_bytes = true
+
+[invariant]
+runs = 256
+depth = 32
+fail_on_revert = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
