ci: update slither target to generic directoty in src

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -28,7 +28,7 @@ jobs:
               uses: crytic/slither-action@v0.4.0
               with:
                 fail-on: all
-                target: 'src/'
+                target: 'src/**/*.sol'
 
             - name: "Run tests"
               run: forge test -vvv
