ci: set foundry profile to ci

--- a/foundry.toml
+++ b/foundry.toml
@@ -6,22 +6,16 @@ solc = "0.8.26"
 evm_version = "cancun"
 
 [fuzz]
-runs = 1000
+runs = 10_000
 max_test_rejects = 65536
 dictionary_weight = 40
 include_storage = true
 include_push_bytes = true
 
-[fuzz.ci]
-runs = 10000
-max_test_rejects = 65536
-dictionary_weight = 40
-include_storage = true
-include_push_bytes = true
-
-[invariant]
-runs = 256
-depth = 32
-fail_on_revert = true
+[profile.ci]
+fuzz_runs = 100_000
+fuzz_dictionary_weight = 40
+fuzz_include_storage = true
+fuzz_include_push_bytes = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
