--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "testfork": "forge test --mp 'test/fork/**/*.sol' -vvv",
     "lint": "solhint --config .solhint.json \"src/**/*.sol\"",
     "analyze": "slither .",
-    "prepare": "husky",
-    "postinstall": "forge install"
+    "prepare": "husky"
   },
   "license": "GPL-2.0-only",
   "devDependencies": {
