--- a/foundry.toml
+++ b/foundry.toml
@@ -5,17 +5,17 @@ libs = ["lib"]
 solc = "0.8.26"
 evm_version = "cancun"
 
-
-[fuzz]
-runs = 1000
+[profile.default.fuzz]
+runs = 10_000
 max_test_rejects = 65536
 dictionary_weight = 40
 include_storage = true
 include_push_bytes = true
 
-[invariant]
-runs = 256
-depth = 32
-fail_on_revert = true
+[profile.ci.fuzz]
+runs = 100_000
+dictionary_weight = 40
+include_storage = true
+include_push_bytes = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
