ci: workflow to deploy with thirdweb CLI

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,7 +3,8 @@ name: Pull request analysis
 on:
     pull_request:
         branches:
-            - main
+            # - main
+            - Javacoin
 
 jobs:
     analyze-code:
