--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "husky": "^9.1.5",
     "solhint": "^5.0.3",
     "solhint-plugin-chainlink-solidity": "git+https://git@github.com/smartcontractkit/chainlink-solhint-rules.git#v1.3.0",
-    "solhint-plugin-prettier": "^0.1.0"
+    "solhint-plugin-prettier": "^0.1.0",
+    "thirdweb": "^5.52.0"
   }
 }
