--- a/.github/workflows/deploy_gen.yml
+++ b/.github/workflows/deploy_gen.yml
@@ -18,6 +18,9 @@ jobs:
             - name: Install Node
               uses: actions/setup-node@v4
 
+            - name: Install Foundry
+              uses: foundry-rs/foundry-toolchain@v1
+
             - name: Install Thirdweb CLI
               run: npm install -g thirdweb
 
